--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   background-color: black;
 }
 .main {
-  background-image: url("assets/images/bg.jpg");
+  background-image: url("./bg.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
